test/integration/progs/errors/string_substr_1.blu
s := "hello world"
print s.substr(0, 0) # should be valid
print s.substr(3, 0)
